Simulador Sistemas Operativos

--- a/src/index.html
+++ b/src/index.html
@@ -54,15 +54,15 @@
 
 
     <!--  ENLACE A LOS MODULOS JAVASCRIPT-->
-    <script src="modulos/renderizar-simulador.js"></script>
-    <script src="modulos/simular-procesos-usuario.js"></script>
-    <script src="modulos/simular-procesos-aleatorios.js"></script>
-    <script src="modulos/visualizar-proceso.js"></script>
-    <script src="modulos/formulario-procesos.js"></script>
-    <script src="modulos/card-panel-procesos.js"></script>
-    <script src="modulos/formulario.js"></script>
-    <script src="modulos/abs.js"></script>
-    <script src="modulos/kernel.js"></script>
+    <script src="modules/renderizar-simulador.js"></script>
+    <script src="modules/simular-procesos-usuario.js"></script>
+    <script src="modules/simular-procesos-aleatorios.js"></script>
+    <script src="modules/visualizar-proceso.js"></script>
+    <script src="modules/formulario-procesos.js"></script>
+    <script src="modules/card-panel-procesos.js"></script>
+    <script src="modules/formulario.js"></script>
+    <script src="modules/abs.js"></script>
+    <script src="modules/kernel.js"></script>
     <script src="main.js"></script>
   </body>
 
